--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -25,7 +25,9 @@
   <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
     <main class="container mt-3">
-      <%- include('../partials/flash') %> <%- body %>
+      <%- include('../partials/flash') %> 
+      
+      <%- body %>
     </main>
     <%- include('../partials/footer') %>
 
