--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -33,6 +33,7 @@
 </div>
 <% } %>
 
+//variables needed to display the map
 <script>
   const mapToken = "<%- process.env.MAPBOX_TOKEN%>";
   const campgrounds = {features: <%- JSON.stringify(campgrounds)%>};
